--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "gatsby": "^2.22.9",
     "gatsby-plugin-html-attributes": "^1.0.5",
     "gatsby-plugin-netlify": "^2.3.3",
+    "gatsby-plugin-preact": "^4.0.0",
     "gatsby-plugin-react-helmet": "^3.3.2",
     "gatsby-plugin-sass": "^2.3.2",
     "node-fetch": "^2.6.0",
     "node-sass": "4.14.1",
     "npm": "^6.14.5",
+    "preact": "^10.4.4",
+    "preact-render-to-string": "^5.1.8",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
